[package]
name = "bevy_dither_post_process"
version = "0.3.0"
edition = "2021"
description = "A post-process black and white ordered dithering effect for the Bevy game engine."
license = "0BSD OR MIT OR Apache-2.0"
repository = "https://git.exvacuum.dev/bevy_dither_post_process"

[dependencies.bevy]
version = "0.15"
default-features = false
features = ["bevy_render", "bevy_core_pipeline", "bevy_pbr", "png"]
